# -POO-251-E003--2024001644-EDITOR_SVG

./: CMakeLists.txt  README.md
POO-251-E003/: CMakeLists.txt
POO-251-E003-ETAPA3/: Canvas.cpp  CanvasWidget.cpp  CanvasWidget.h  EditorController.cpp  MainWindow.cpp  Point.h  Shape.h
POO-251-E003-ETAPA3/src/: Polygon.cpp  main.cpp
POO-251-E003-Etapa 3/: CMakeLists.txt
POO-251-E003-Etapa 3/include/: Canvas.h  EditorController.h  MainWindow.h  Polygon.h
POO-251-E003/design/: CLIView.h  EditorController.h  Shape.h
POO-251-E003/include/editor/: Canvas.h  MainWindow.h  Polygon.h  Shape.h  View.h
POO-251-E003/src/: CLIView.cpp  Canvas.cpp  EditorController.cpp  MainWindow.cpp  Point.cpp  Polygon.cpp  main.cpp
design/: Polygon.h
